--- a/KutuphaneYonetimSistemi.csproj
+++ b/KutuphaneYonetimSistemi.csproj
@@ -125,6 +125,8 @@
     <Compile Include="Model\Entities\tbl_Yetki.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\Generic\Generic.cs" />
+    <Compile Include="Model\Manuel\Sinif\Login.cs" />
     <Compile Include="Model\Manuel\Sinif\Temelİslem.cs" />
     <Compile Include="Model\Manuel\VeriTabaniİslemleri\IDatabase.cs" />
     <Compile Include="Model\Manuel\VeriTabaniİslemleri\TemelVeritabani.cs" />
@@ -140,14 +142,14 @@
     <Compile Include="Personeller.Designer.cs">
       <DependentUpon>Personeller.cs</DependentUpon>
     </Compile>
-    <Compile Include="Profil.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Profil.Designer.cs">
-      <DependentUpon>Profil.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TeslimAlmaİslemleri.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TeslimAlmaİslemleri.Designer.cs">
+      <DependentUpon>TeslimAlmaİslemleri.cs</DependentUpon>
+    </Compile>
     <Compile Include="Uyeİslemleri.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -190,9 +192,6 @@
     <EmbeddedResource Include="Personeller.resx">
       <DependentUpon>Personeller.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Profil.resx">
-      <DependentUpon>Profil.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -203,6 +202,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TeslimAlmaİslemleri.resx">
+      <DependentUpon>TeslimAlmaİslemleri.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Uyeİslemleri.resx">
       <DependentUpon>Uyeİslemleri.cs</DependentUpon>
     </EmbeddedResource>
