--- a/App.config
+++ b/App.config
@@ -10,6 +10,7 @@
   </startup>
   <connectionStrings>
     <add name="KutuphaneYonetimiEntities" connectionString="metadata=res://*/Model.Entities.Model1.csdl|res://*/Model.Entities.Model1.ssdl|res://*/Model.Entities.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-L2IUGM8\SQLEXPRESS05;initial catalog=KutuphaneYonetimi;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KutuphaneEntities" connectionString="metadata=res://*/Model.Entities.Model1.csdl|res://*/Model.Entities.Model1.ssdl|res://*/Model.Entities.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-L2IUGM8\SQLEXPRESS05;initial catalog=Kutuphane;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <userSettings>
     <KutuphaneYonetimSistemi.Properties.Settings>
